# popini

./: .gitignore  CMakeLists.txt  README.md
src/: popini.c  popini.h
test/: CMakeLists.txt
test/src/: main.c
